[package]
name = "advent2019"
version = "0.1.0"
authors = ["Adam Rodger <adam.rodger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false
doctest = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
